adding index to root

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <h1>My cs50w projetcts</h1>
-        <a href="project0/index.html">Project 0</a>
+        <ul>
+            <li><a href="project0/index.html">Project 0</a></li>
+        </ul>
     </body>
 </html>
