--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -5,6 +5,7 @@
         <title>
             Advanced Search
         </title>
+        <link rel="icon" type="image/x-icon" href="static/icon.png">
         <link href="styles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
