--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
     <body>
-        <h1>My cs50w projetcts</h1>
+        <h1>My cs50w projects</h1>
         <ul>
             <li><a href="project0/index.html">Project 0</a></li>
         </ul>
