--- a/project0/advanced_search.html
+++ b/project0/advanced_search.html
@@ -7,14 +7,11 @@
         </title>
         <link rel="icon" type="image/x-icon" href="static/icon.png">
         <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <div class="page">
+        <div class="adv-page">
 
             <div class="header">
                 <div class="noflex">
