--- a/project0/image_search.html
+++ b/project0/image_search.html
@@ -32,6 +32,9 @@
                         <input type="text" name="q" autofocus>
                         <input name="tbm" value="isch" type="hidden">
                     </div>
+                    <div class="search-buttons">
+                        <input type="submit" value="Google Search">
+                    </div>
                 </form>
             </div>
 
