--- a/project0/image_search.html
+++ b/project0/image_search.html
@@ -27,15 +27,17 @@
             </div>
             
             <div class="search-bar">
-                <form action="https://www.google.com/search" autocomplete="off">
-                    <div class="search-q">
-                        <input type="text" name="q" autofocus>
-                        <input name="tbm" value="isch" type="hidden">
-                    </div>
-                    <div class="search-buttons">
-                        <input type="submit" value="Google Search">
-                    </div>
-                </form>
+                <div class="search-q">
+                    <form action="https://www.google.com/search" autocomplete="off">
+                        <div class="border">
+                            <input id="q" type="text" name="q" autofocus>
+                            <input name="tbm" value="isch" type="hidden">
+                            <button type="submit">
+                                <img role="button" src="static/searchbutton.png">
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
 
             <div class="footer">
@@ -43,5 +45,18 @@
             </div>
     
         </div>
+
+        <script>
+            document.getElementById("q").addEventListener("focusin", light_on);
+            document.getElementById("q").addEventListener("focusout", light_off);
+
+            function light_on() {
+                event.target.parentElement.classList.add("highlight");
+            }
+            function light_off() {
+                event.target.parentElement.classList.remove("highlight");
+            }
+        </script>
+
     </body>
 </html>
